# openapi.json
@@ -974,8 +974,15 @@
                   "Strength": {
                     "type": "string"
                   },
-                  "Size": {
-                    "type": "string"
+                  "LengthMm": {
+                    "type": "integer",
+                    "format": "int32",
+                    "nullable": true
+                  },
+                  "Diameter": {
+                    "type": "integer",
+                    "format": "int32",
+                    "nullable": true
                   },
                   "Wrapper": {
                     "type": "string"
@@ -1011,7 +1018,10 @@
                 "Strength": {
                   "style": "form"
                 },
-                "Size": {
+                "LengthMm": {
+                  "style": "form"
+                },
+                "Diameter": {
                   "style": "form"
                 },
                 "Wrapper": {
@@ -1444,8 +1454,15 @@
                   "Strength": {
                     "type": "string"
                   },
-                  "Size": {
-                    "type": "string"
+                  "LengthMm": {
+                    "type": "integer",
+                    "format": "int32",
+                    "nullable": true
+                  },
+                  "Diameter": {
+                    "type": "integer",
+                    "format": "int32",
+                    "nullable": true
                   },
                   "Wrapper": {
                     "type": "string"
@@ -1496,7 +1513,10 @@
                 "Strength": {
                   "style": "form"
                 },
-                "Size": {
+                "LengthMm": {
+                  "style": "form"
+                },
+                "Diameter": {
                   "style": "form"
                 },
                 "Wrapper": {
@@ -2729,8 +2749,14 @@
           "brand": {
             "$ref": "#/components/schemas/BrandDto"
           },
-          "size": {
-            "type": "string",
+          "lengthMm": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "diameter": {
+            "type": "integer",
+            "format": "int32",
             "nullable": true
           },
           "strength": {
@@ -2823,8 +2849,14 @@
             "type": "string",
             "nullable": true
           },
-          "size": {
-            "type": "string",
+          "lengthMm": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "diameter": {
+            "type": "integer",
+            "format": "int32",
             "nullable": true
           },
           "strength": {
@@ -2913,8 +2945,14 @@
             "type": "string",
             "nullable": true
           },
-          "size": {
-            "type": "string",
+          "lengthMm": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "diameter": {
+            "type": "integer",
+            "format": "int32",
             "nullable": true
           },
           "strength": {
